src/test/deca/context/valid/negative_pars_02.deca
// Description:
//    Programme minimaliste utilisant - avec un float.
//
// Resultats:
//      -1.4
//
// Historique:
//    cree le 04/01/2023

{

        int a = -1.4;
        println(a);

}
